# playground_pytest

./: README.md  pyproject.toml
playground/: CrazyNumerals.py  RomanNumerals.py  Translator.py  YearFormatter.py
playground/tests/fixture/: conftest.py
playground/tests/fixture/test_fixture_1/: conftest.py  test_fixture_pytest.py  test_fixture_unittest.py
playground/tests/fixture/test_fixture_2/: conftest.py  test_fixture_2_pytest.py  test_parametrize_2_pytest.py
playground/tests/hypothesis/: test_hypothesis.py
playground/tests/parametrize/: test_parametrize_pytest.py  test_parametrize_unittest.py
