[tool.poetry]
name = "playground-pytest"
version = "0.1.0"
description = ""
authors = ["Pablo Acosta <pablo@badgermapping.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.4.1"
hypothesis = "^6.135.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
